Adopt layer-based package structure; align with Boot 4.1.1/Java 25
Reorganize main and test sources from feature packages (account/,
transfer/, ledger/, money/, error/, idempotency/) into the layer-based
structure documented in CLAUDE.md: repository, model.entity, model.dto,
controller, service, exception, config, util. Bump the Gradle wrapper
to 9.7.1 and set spring.mvc.problemdetails.enabled explicitly.

Also correct CLAUDE.md's Java 25 guidance (Compact Object Headers is
off by default and G1, not Shenandoah, is the container default; both
were previously stated backwards), document the AOT cache workflow,
and bring version references up to date. Bump Spring Boot to 4.1.1,
enable Gradle's configuration cache, and set
-XX:+UseCompactObjectHeaders on the deployed container per the
corrected guidance.